# MonadObsidian

./: LICENSE  MonadObsidian.cabal  README.org
Obsidian/: MonadObsidian.hs
Obsidian/MonadObsidian/: API.hs  AbsC.hs  Arr.hs  Exp.hs  GPUMonad.hs  GenCuda.hs  IC.hs  MM.hs  Printing.hs  PureAPI.hs  Syncable.hs  Test.hs  Tools.hs  Types.hs
